--- a/.github/workflows/test-warden-admin.yml
+++ b/.github/workflows/test-warden-admin.yml
@@ -8,7 +8,7 @@ on:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
       workspace:
-        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .wardenrc'
+        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .warden'
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for main).'
 
@@ -25,6 +25,6 @@ jobs:
       workspace: '${{ inputs.workspace }}'
       number: '${{ inputs.number }}'
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
-      wif_service_account: 'autotf-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
+      wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
       warden_bucket_name: 'verbanicm-dev-terraform'
       warden_tf_version: '1.1.8'
