--- a/.github/workflows/test-warden-plan.yml
+++ b/.github/workflows/test-warden-plan.yml
@@ -2,7 +2,7 @@ name: 'Warden Plan - Test'
 run-name: 'Warden Plan - PR #${{ github.event.pull_request.number }}'
 
 on:
-  pull_request_target:
+  pull_request:
     types:
       - 'opened'
       - 'synchronize'
@@ -25,6 +25,6 @@ jobs:
     uses: 'abcxyz/warden/.github/workflows/warden-plan.yml@main'
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
-      wif_service_account: 'autotf-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
+      wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
       warden_bucket_name: 'verbanicm-dev-terraform'
       warden_tf_version: '1.1.8'
