--- a/.github/workflows/test-warden-unlock.yml
+++ b/.github/workflows/test-warden-unlock.yml
@@ -20,6 +20,6 @@ jobs:
     uses: 'abcxyz/warden/.github/workflows/warden-unlock.yml@main'
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
-      wif_service_account: 'autotf-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
+      wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
       warden_bucket_name: 'verbanicm-dev-terraform'
       warden_tf_version: '1.1.8'
