--- a/.github/workflows/test-warden-plan.yml
+++ b/.github/workflows/test-warden-plan.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   plan:
-    uses: 'abcxyz/warden/.github/workflows/warden-plan.yml@main'
+    uses: 'abcxyz/warden/.github/workflows/warden-plan.yml@main' # ratchet:exclude
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
