--- a/.github/workflows/warden-unlock.yml
+++ b/.github/workflows/warden-unlock.yml
@@ -71,7 +71,7 @@ jobs:
     steps:
       - id: 'comment'
         name: 'Start Comment'
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -89,18 +89,18 @@ jobs:
             return prComment.id;
 
       - name: 'Checkout'
-        uses: 'actions/checkout@v3'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
         with:
           workload_identity_provider: '${{ env.WIF_PROVIDER }}'
           service_account: '${{ env.WIF_SERVICE_ACCOUNT }}'
           token_format: 'access_token'
 
       - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v1'
+        uses: 'google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587' # ratchet:google-github-actions/setup-gcloud@v1
         with:
           skip_install: true
 
@@ -138,7 +138,7 @@ jobs:
 
       - name: 'Validate Comment'
         if: ${{ steps.validate.outcome != 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -158,7 +158,7 @@ jobs:
       - id: 'checks'
         name: 'Update Checks'
         continue-on-error: true
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -223,7 +223,7 @@ jobs:
 
       - name: 'Unlock Success Comment'
         if: ${{ steps.checks.outcome == 'success' && steps.unlock.outcome == 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -240,7 +240,7 @@ jobs:
 
       - name: 'Unlock Failed Comment'
         if: ${{ steps.checks.outcome != 'success' || steps.unlock.outcome != 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
