--- a/.github/workflows/test-warden-unlock.yml
+++ b/.github/workflows/test-warden-unlock.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   unlock:
-    uses: 'abcxyz/warden/.github/workflows/warden-unlock.yml@main'
+    uses: 'abcxyz/warden/.github/workflows/warden-unlock.yml@main' # ratchet:exclude
     with:
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
