--- a/.github/workflows/warden-plan.yml
+++ b/.github/workflows/warden-plan.yml
@@ -47,7 +47,7 @@ jobs:
       paths: ${{ steps.set-matrix.outputs.paths }}
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@v3'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
       - id: 'set-matrix'
         name: 'Set Matrix'
@@ -68,18 +68,18 @@ jobs:
 
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@v3'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
         with:
           workload_identity_provider: '${{ env.WIF_PROVIDER }}'
           service_account: '${{ env.WIF_SERVICE_ACCOUNT }}'
           token_format: 'access_token'
 
       - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v1'
+        uses: 'google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587' # ratchet:google-github-actions/setup-gcloud@v1
         with:
           version: '>= 416.0.0'
 
@@ -120,7 +120,7 @@ jobs:
 
       - name: 'Invalid Comment'
         if: ${{ steps.lock.outcome != 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -159,7 +159,7 @@ jobs:
     steps:
       - id: 'comment'
         name: 'Start Comment'
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -178,18 +178,18 @@ jobs:
             return prComment.id
 
       - name: 'Checkout'
-        uses: 'actions/checkout@v3'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
         with:
           workload_identity_provider: '${{ env.WIF_PROVIDER }}'
           service_account: '${{ env.WIF_SERVICE_ACCOUNT }}'
           token_format: 'access_token'
 
       - name: 'Setup Terraform'
-        uses: abcxyz/secure-setup-terraform@v0.2.4
+        uses: abcxyz/secure-setup-terraform@b5991db039fb759d12bc5de45c2258cc79eb1ada # ratchet:abcxyz/secure-setup-terraform@v0.2.4
         with:
           terraform_version: '${{ env.WARDEN_TF_VERSION }}'
           terraform_module_location: './${{ matrix.path }}'
@@ -197,7 +197,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v1'
+        uses: 'google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587' # ratchet:google-github-actions/setup-gcloud@v1
         with:
           version: '>= 416.0.0'
 
@@ -242,7 +242,7 @@ jobs:
 
       - name: 'Success Comment'
         if: ${{ steps.plan.outcome == 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
@@ -269,7 +269,7 @@ jobs:
 
       - name: 'Failure Comment'
         if: ${{ steps.plan.outcome != 'success' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
