--- a/.github/workflows/warden-plan.yml
+++ b/.github/workflows/warden-plan.yml
@@ -27,6 +27,10 @@ on:
         required: false
         default: '1.1.8'
         type: string
+    secrets:
+      gh_token:
+        required: false
+
 env:
   MAX_RETRIES: ${{ inputs.max_retries }}
   BASE_RETRY_DELAY: ${{ inputs.base_retry_delay }}
@@ -145,6 +149,7 @@ jobs:
     env:
       WARDEN_PLAN_PREFIX: 'warden-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ matrix.path }}'
       WARDEN_PLAN_FILENAME: '${{ github.event.pull_request.head.sha }}.tfplan'
+      GITHUB_TOKEN: ${{ secrets.gh_token || github.token }}
     steps:
       - id: 'comment'
         name: 'Start Comment'
@@ -201,8 +206,13 @@ jobs:
         id: 'plan'
         continue-on-error: true
         run: |-
-          terraform plan -input=false -no-color -out=${{ env.WARDEN_PLAN_FILENAME }} \
-          && terraform show -no-color ${{ env.WARDEN_PLAN_FILENAME }} 2>&1 > out.txt
+          terraform plan -input=false -no-color -out=${{ env.WARDEN_PLAN_FILENAME }} 2>&1 > out.txt
+      - name: 'Show'
+        id: 'show'
+        if: ${{ steps.plan.outcome == 'success' }}
+        continue-on-error: true
+        run: |-
+          terraform show -no-color ${{ env.WARDEN_PLAN_FILENAME }} 2>&1 > out.txt
       - name: 'GitHub Plan Format'
         id: 'format'
         run: |-
