--- a/.github/workflows/test-warden-apply.yml
+++ b/.github/workflows/test-warden-apply.yml
@@ -10,6 +10,9 @@ on:
     paths:
       - 'test/**'
 
+concurrency:
+  group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
+
 permissions:
   contents: 'read'
   id-token: 'write'
