--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -24,7 +24,7 @@ on:
       guardian_bucket_name:
         required: true
         type: string
-      guardian_tf_version:
+      guardian_terraform_version:
         required: false
         default: '1.1.8'
         type: string
@@ -39,8 +39,10 @@ env:
   WIF_PROVIDER: ${{ inputs.wif_provider }}
   WIF_SERVICE_ACCOUNT: ${{ inputs.wif_service_account }}
   GUARDIAN_BUCKET_NAME: ${{ inputs.guardian_bucket_name }}
-  GUARDIAN_TF_VERSION: ${{ inputs.guardian_tf_version }}
+  GUARDIAN_TERRAFORM_VERSION: ${{ inputs.guardian_terraform_version }}
   GUARDIAN_LOCK_FILENAME: 'guardian-locks/${{ github.repository }}/${{ github.repository_id }}.tflock'
+  OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+  TF_IN_AUTOMATION: true # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
 
 jobs:
   apply_init:
@@ -50,7 +52,7 @@ jobs:
       id-token: 'write'
       pull-requests: 'write'
     outputs:
-      paths: ${{ steps.set-matrix.outputs.paths }}
+      dirs: ${{ steps.set-matrix.outputs.dirs }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -65,8 +67,8 @@ jobs:
       - name: 'Setup Terraform'
         uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
         with:
-          terraform_version: '${{ env.GUARDIAN_TF_VERSION }}'
-          terraform_module_location: './${{ matrix.path }}'
+          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
+          terraform_module_location: './${{ matrix.dir }}'
           protect_lockfile: false
           terraform_wrapper: false
 
@@ -111,8 +113,8 @@ jobs:
       - name: 'Set Matrix'
         id: 'set-matrix'
         run: |-
-          PATHS=$(touch .guardian | cat .guardian | jq --raw-input . | jq --slurp . -c | jq -r tostring)
-          echo "paths=${PATHS}" >> $GITHUB_OUTPUT
+          DIRS=$(touch .guardian | cat .guardian | jq -nRrc '[inputs|split("\n")] | flatten | tostring' )
+          echo "dirs=${DIRS}" >> $GITHUB_OUTPUT
 
       - name: 'Invalid Comment'
         if: ${{ failed() }}
@@ -120,16 +122,18 @@ jobs:
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
+            const msg = `${{ steps.validate.outputs.error }}` || `Failed to initialize and validate lock.`
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to initialize and validate lock. [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]`,
+              body: `**\`🔱 Guardian 🔱\`** - 🟥 ${msg} [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]`,
             });
 
   apply:
-    needs: ['apply_init']
-    if: ${{ github.event.pull_request.merged }}
+    needs:
+      - 'apply_init'
+    if: ${{ always() && github.event.pull_request.merged }}
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -138,13 +142,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        path: ${{ fromJSON(needs.apply_init.outputs.paths) }}
+        dir: ${{ fromJSON(needs.apply_init.outputs.dirs) }}
     defaults:
       run:
         shell: 'bash'
-        working-directory: '${{ matrix.path }}'
+        working-directory: '${{ matrix.dir }}'
     env:
-      GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ matrix.path }}'
+      GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ matrix.dir }}'
       GUARDIAN_PLAN_FILENAME: '${{ github.event.pull_request.head.sha }}.tfplan'
       GITHUB_TOKEN: ${{ secrets.gh_token || github.token }}
     steps:
@@ -158,7 +162,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Apply in dir: \`${{matrix.path}}\``,
+              body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Apply in dir: \`${{matrix.dir}}\``,
             });
 
             return prComment.id
@@ -176,8 +180,8 @@ jobs:
       - name: 'Setup Terraform'
         uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
         with:
-          terraform_version: '${{ env.GUARDIAN_TF_VERSION }}'
-          terraform_module_location: './${{ matrix.path }}'
+          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
+          terraform_module_location: './${{ matrix.dir }}'
           protect_lockfile: false
           terraform_wrapper: false
 
@@ -193,33 +197,42 @@ jobs:
           gcloud config set storage/max_retry_delay ${{ env.MAX_RETRY_DELAY }}
 
       - name: 'Init'
-        run: terraform init -input=false
+        run: |-
+          terraform init -input=false 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Download Plan'
         run: |-
           gcloud storage cp \
             gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/${{ env.GUARDIAN_PLAN_FILENAME }} \
-            ${{ env.GUARDIAN_PLAN_FILENAME }}
+            ${{ env.GUARDIAN_PLAN_FILENAME }} \
+            2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Apply'
         run: |-
-          terraform apply -no-color -input=false ${{ env.GUARDIAN_PLAN_FILENAME }} > out.txt 2>&1
-          cat out.txt
+          terraform apply -no-color -input=false ${{ env.GUARDIAN_PLAN_FILENAME }} 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'GitHub Format'
         run: |-
-          cat out.txt | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' 2>&1 > out.txt
-          cat out.txt
+          cat ${{ env.OUT_FILENAME }} | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' 2&>1 | tee ${{ env.OUT_FILENAME }}
 
-      - name: 'Set ENV'
+      - name: 'Set Success Env'
         run: |-
-          OUT=$(cat out.txt)
-          echo "OUT<<EOF" >> $GITHUB_ENV
-          echo "$OUT" >> $GITHUB_ENV
+          SUCCESS=$(cat ${{ env.OUT_FILENAME }})
+          echo "SUCCESS<<EOF" >> $GITHUB_ENV
+          echo "$SUCCESS" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
       - name: 'Delete Plan'
-        run: gcloud storage rm gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/*
+        run: |-
+          gcloud storage rm gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/* 2&>1 | tee ${{ env.OUT_FILENAME }}
+
+      - name: 'Set Out Env'
+        if: ${{ failure() }}
+        run: |-
+          OUT=$(cat ${{ env.OUT_FILENAME }})
+          echo "OUT<<EOF" >> $GITHUB_ENV
+          echo "$OUT" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: 'Failure Comment'
         if: ${{ failure() }}
@@ -231,7 +244,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               comment_id: "${{ steps.comment.outputs.result }}",
-              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Apply in dir: \`${{matrix.path}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
+              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Apply in dir: \`${{matrix.dir}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
 
               <details>
               <summary>Details</summary>\n
@@ -252,7 +265,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               comment_id: "${{ steps.comment.outputs.result }}",
-              body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Apply in dir: \`${{matrix.path}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
+              body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Apply in dir: \`${{matrix.dir}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
 
               <details>
               <summary>Details</summary>\n
@@ -265,7 +278,9 @@ jobs:
 
   # we should always unlock when a PR is closed and we hold the lock, regardless of merge status
   apply_unlock:
-    needs: ['apply_init', 'apply']
+    needs:
+      - 'apply_init'
+      - 'apply'
     if: ${{ always() && needs.apply_init.result == 'success' }}
     runs-on: 'ubuntu-latest'
     permissions:
@@ -296,7 +311,8 @@ jobs:
 
       - name: 'Unlock'
         id: 'unlock'
-        run: gcloud storage rm gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_LOCK_FILENAME }}
+        run: |-
+          gcloud storage rm gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_LOCK_FILENAME }}
 
       - name: 'Failure Comment'
         if: ${{ failure() }}
