--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -24,7 +24,7 @@ on:
       guardian_bucket_name:
         required: true
         type: string
-      guardian_tf_version:
+      guardian_terraform_version:
         required: false
         default: '1.1.8'
         type: string
@@ -39,7 +39,9 @@ env:
   WIF_PROVIDER: ${{ inputs.wif_provider }}
   WIF_SERVICE_ACCOUNT: ${{ inputs.wif_service_account }}
   GUARDIAN_BUCKET_NAME: ${{ inputs.guardian_bucket_name }}
-  GUARDIAN_TF_VERSION: ${{ inputs.guardian_tf_version }}
+  GUARDIAN_TERRAFORM_VERSION: ${{ inputs.guardian_terraform_version }}
+  OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+  TF_IN_AUTOMATION: true # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
 
 jobs:
   plan_init:
@@ -52,7 +54,7 @@ jobs:
       GUARDIAN_LOCK_PREFIX: 'guardian-locks/${{ github.repository }}'
       GUARDIAN_LOCK_FILENAME: '${{ github.repository_id }}.tflock'
     outputs:
-      paths: ${{ steps.set-matrix.outputs.paths }}
+      dirs: ${{ steps.set-matrix.outputs.dirs }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -88,23 +90,25 @@ jobs:
                 gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_LOCK_PREFIX }}/${{ env.GUARDIAN_LOCK_FILENAME }} \
                 --if-generation-match="0" \
                 --custom-metadata="lock_id=$NAME,lock_repo_url=$REPO_URL"
-          else 
-              LOCK_ID=$(echo -n ${RESPONSE} | jq -r '.[0].metadata.lock_id')
-              LOCK_REPO_URL=$(echo -n ${RESPONSE} | jq -r '.[0].metadata.lock_repo_url')
+              
+              exit 0
+          fi
 
-              if [ "$LOCK_ID" != "$NAME" ]; then
-                  MSG="Plan is locked by another process: ${LOCK_REPO_URL}"
-                  echo "::error ::${MSG}"
-                  echo "error=${MSG}" >> $GITHUB_OUTPUT
-                  exit 1
-              fi
+          LOCK_ID=$(echo -n ${RESPONSE} | jq -r '.[0].metadata.lock_id')
+          LOCK_REPO_URL=$(echo -n ${RESPONSE} | jq -r '.[0].metadata.lock_repo_url')
+
+          if [ "$LOCK_ID" != "$NAME" ]; then
+              MSG="Plan is locked by another process: ${LOCK_REPO_URL}"
+              echo "::error ::${MSG}"
+              echo "error=${MSG}" >> $GITHUB_OUTPUT
+              exit 1
           fi
 
       - name: 'Set Matrix'
         id: 'set-matrix'
         run: |-
-          PATHS=$(touch .guardian | cat .guardian | jq --raw-input . | jq --slurp . -c | jq -r tostring)
-          echo "paths=${PATHS}" >> $GITHUB_OUTPUT
+          DIRS=$(touch .guardian | cat .guardian | jq -nRrc '[inputs|split("\n")] | flatten | tostring' )
+          echo "dirs=${DIRS}" >> $GITHUB_OUTPUT
 
       - name: 'Invalid Comment'
         if: ${{ failure() }}
@@ -112,15 +116,17 @@ jobs:
         with:
           retries: ${{ env.MAX_RETRIES }}
           script: |-
+            const msg = `${{ steps.validate.outputs.error }}` || `Failed to initialize and lock.`
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to initialize and lock. [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]`,
+              body: `**\`🔱 Guardian 🔱\`** - 🟥 ${msg} [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]`,
             });
 
   plan:
-    needs: ['plan_init']
+    needs:
+      - 'plan_init'
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -129,13 +135,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        path: ${{ fromJSON(needs.plan_init.outputs.paths) }}
+        dir: ${{ fromJSON(needs.plan_init.outputs.dirs) }}
     defaults:
       run:
         shell: 'bash'
-        working-directory: '${{ matrix.path }}'
+        working-directory: '${{ matrix.dir }}'
     env:
-      GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ matrix.path }}'
+      GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ matrix.dir }}'
       GUARDIAN_PLAN_FILENAME: '${{ github.event.pull_request.head.sha }}.tfplan'
       GITHUB_TOKEN: ${{ secrets.gh_token || github.token }}
     steps:
@@ -149,7 +155,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Plan in dir: \`${{matrix.path}}\``,
+              body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Plan in dir: \`${{matrix.dir}}\``,
             });
 
             return prComment.id
@@ -167,8 +173,8 @@ jobs:
       - name: 'Setup Terraform'
         uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
         with:
-          terraform_version: '${{ env.GUARDIAN_TF_VERSION }}'
-          terraform_module_location: './${{ matrix.path }}'
+          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
+          terraform_module_location: './${{ matrix.dir }}'
           protect_lockfile: false
           terraform_wrapper: false
 
@@ -183,45 +189,45 @@ jobs:
 
       - name: 'Lint'
         run: |-
-          terraform fmt -check -diff -recursive > out.txt 2>&1
-          cat out.txt
+          terraform fmt -check -diff -recursive 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Init'
         run: |-
-          terraform init -input=false > out.txt 2>&1
-          cat out.txt
+          terraform init -input=false 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Validate'
         run: |-
-          terraform validate > out.txt 2>&1
-          cat out.txt
+          terraform validate 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Plan'
         run: |-
-          terraform plan -input=false -no-color -out=${{ env.GUARDIAN_PLAN_FILENAME }} > out.txt 2>&1
-          cat out.txt
+          terraform plan -input=false -no-color -out=${{ env.GUARDIAN_PLAN_FILENAME }} 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Show'
         run: |-
-          terraform show -no-color ${{ env.GUARDIAN_PLAN_FILENAME }} > out.txt 2>&1
-          cat out.txt
+          terraform show -no-color ${{ env.GUARDIAN_PLAN_FILENAME }} 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'GitHub Format'
         run: |-
-          cat out.txt | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > out.txt 2>&1
-          cat out.txt
+          cat ${{ env.OUT_FILENAME }} | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' 2&>1 | tee ${{ env.OUT_FILENAME }}
+
+      - name: 'Set Success Env'
+        run: |-
+          SUCCESS=$(cat ${{ env.OUT_FILENAME }})
+          echo "SUCCESS<<EOF" >> $GITHUB_ENV
+          echo "$SUCCESS" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: 'Upload Plan'
         run: |-
           gcloud storage cp \
             ${{ env.GUARDIAN_PLAN_FILENAME }} \
-            gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/${{ env.GUARDIAN_PLAN_FILENAME }} > out.txt 2>&1
-          cat out.txt
+            gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/${{ env.GUARDIAN_PLAN_FILENAME }} 2&>1 | tee ${{ env.OUT_FILENAME }}
 
       - name: 'Set Out Env'
-        if: ${{ always() }}
+        if: ${{ failure() }}
         run: |-
-          OUT=$(cat out.txt)
+          OUT=$(cat ${{ env.OUT_FILENAME }})
           echo "OUT<<EOF" >> $GITHUB_ENV
           echo "$OUT" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -236,7 +242,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               comment_id: '${{ steps.comment.outputs.result }}',
-              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Plan in dir: \`${{matrix.path}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
+              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Plan in dir: \`${{matrix.dir}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
 
               <details>
               <summary>Details</summary>\n
@@ -257,12 +263,12 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               comment_id: '${{ steps.comment.outputs.result }}',
-              body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Plan in dir: \`${{matrix.path}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
+              body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Plan in dir: \`${{matrix.dir}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }})]
 
               <details>
               <summary>Diff</summary>\n
               \`\`\`diff\n
-              ${{env.OUT}}
+              ${{env.SUCCESS}}
               \`\`\`
               </details>
               `,
