--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -1,5 +1,5 @@
 name: 'Guardian Admin - Test'
-run-name: 'Guardian Admin ${{ inputs.workspace }} ${{ inputs.number }}'
+run-name: 'Guardian Admin ${{ inputs.directories }} ${{ inputs.number }}'
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ on:
       command:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
-      workspace:
-        description: 'WORKSPACE - The Terraform workspace directory to execute the command in. If left blank, the command will run for all paths in .guardian'
+      directories:
+        description: 'DIRECTORIES - The Terraform directories to execute the command in. If left blank, the command will run for all directories in .guardian'
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for main).'
 
@@ -25,9 +25,9 @@ jobs:
     uses: 'abcxyz/warden/.github/workflows/admin.yml@main' # ratchet:exclude
     with:
       command: '${{ inputs.command }}'
-      workspace: '${{ inputs.workspace }}'
+      directories: '${{ inputs.directories }}'
       number: '${{ inputs.number }}'
       wif_provider: 'projects/200062081032/locations/global/workloadIdentityPools/github-pool/providers/github-provider-abcxyz-warden'
       wif_service_account: 'warden-ci-sa@verbanicm-dev.iam.gserviceaccount.com'
       guardian_bucket_name: 'verbanicm-dev-terraform'
-      guardian_tf_version: '1.1.8'
+      guardian_terraform_version: '1.1.8'
